...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Priority" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO
                                                    <rect key="frame" x="15" y="30" width="303" height="20.5"/>
                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Tasks" id="wmf-Tx-jL9">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Jdu-HY-lEw">
                            <connections>
...
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cqa-kv-gPB">
                                                    <rect key="frame" x="15" y="7" width="345" height="30"/>
                                                    <accessibility key="accessibilityConfiguration" hint="TaskTitle" identifier="TaskTitle" label="TaskTitle"/>
                                                    <nil key="textColor"/>
                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
...
                                                    <rect key="frame" x="10" y="5" width="350" height="50"/>
                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                    <accessibility key="accessibilityConfiguration" hint="ContentTextView" identifier="ContentTextView" label="ContentTextView"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="50" id="1Bl-ua-zCU"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="New Task" id="WYq-6m-nfR">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="qMK-FV-xlb">
                            <connections>
...
                        </barButtonItem>
                        <rightBarButtonItems>
                            <barButtonItem title="Create" id="iTu-Ds-Yel">
                                <connections>
                                    <action selector="createAction:" destination="a1O-t7-2tx" id="Urc-sv-Nde"/>
...
