...
            return "Status"
        case .content:
            return "Content"
        case .priority:
            return "Priority"
        case .startDate:
            return "Start Date"
        case .durationInMinutes:
            return "Duration In Minutes"
        case .attachments:
            return "Attachments"
        }
    }
}

...
                taskPrototype.priority = priority
            }
            if let status = task.status?.statusEnum {
                taskPrototype.status = status
            }
            
            navigationItem.rightBarButtonItem?.title = "Save"
            navigationItem.title = "Edit Task"
        }
        
        taskFieldsTableView.dataSource = self
        taskFieldsTableView.delegate = self
        
        taskFieldsTableView.estimatedRowHeight = 44.0
...
